# SQM

./: .gitignore  README.md
SQMEditor/: AddRemoveText.cpp  AddRemoveText.h  CentralDocument.cpp  CentralDocument.h  CentralWidget.cpp  CentralWidget.h  CodeEditor.cpp  CodeEditor.h  ConsoleDock.cpp  ConsoleDock.h  FSDock.cpp  FSDock.h  HelpDialog.cpp  HelpDialog.h  HelpDialog.ui  Highlighter.cpp  Highlighter.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  MiniMap.cpp  MiniMap.h  ResultsDock.cpp  ResultsDock.h  SQMEditor.pro  common.h  main.cpp  res.qrc  style.css  wordlist.txt
qEngine/: CMakeLists.txt  main.cpp
qEngine/inc/Eigen/: StdVector
qEngine/scripts/: basic.sqm  tst.sqm
qEngine/src/: common.hpp  gates.cpp  gates.hpp  qubit.cpp  qubit.hpp
qEngine/src/angelscript/: as_config.h
qEngine/xcode/qEngine/qEngine.xcodeproj/: project.pbxproj
qEngine/xcode/qEngine/qEngine.xcodeproj/project.xcworkspace/xcuserdata/annique.xcuserdatad/: UserInterfaceState.xcuserstate
qEngine/xcode/qEngine/qEngine.xcodeproj/xcuserdata/annique.xcuserdatad/xcschemes/: xcschememanagement.plist
